--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
-  "engines":{
-    "node":"12.16.1",
-    "npm":"6.13.4"
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
   },
   "scripts": {
-    "start":"node server/index.js"
+    "start": "node server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
